[project]
name = "docs"
version = "5.48.3"
requires-python = "==3.14.2"
classifiers = [
    "Framework :: Pydantic",
    "Framework :: Sphinx",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "furo==2025.12.19",
    "gitpython==3.1.46",
    "myst-parser==4.0.1",
    "pydantic==2.12.5",         # Needed for generating the reference docs from the data model
    "shared-code",
    "sphinx==8.2.3",
    "sphinx-copybutton==0.5.2",
    "sphinx-design==0.6.1",
]
optional-dependencies.dev = [
    "coverage==7.13.2",
    "unittest-xml-reporting==4.0.0", # Needed to generate JUnit XML output for Sonarcloud.io
]
optional-dependencies.tools = [
    "bandit==1.9.3",
    "codespell==2.4.1",
    "fixit==2.2.1",
    "mypy==1.19.1",
    "pip-audit==2.10.0",
    "pydantic==2.12.5",      # Needed because uvx needs to inject Pydantic into the mpyp venv, see ci/quality.sh
    "pyproject-fmt==2.11.1",
    "ruff==0.14.14",
    "troml==0.4.1",
    "vale==3.13.0.0",        # Documentation grammar and style checker
    "vulture==2.14",
    "yamllint==1.37.1",
]

[tool.uv.sources]
shared-code = { path = "../components/shared_code", editable = true }

[tool.ruff]
line-length = 120
src = [
    "src",
]
lint.select = [
    "ALL",
]
lint.ignore = [
    "COM812", # https://docs.astral.sh/ruff/rules/missing-trailing-comma/ - this rule may cause conflicts when used with the ruff formatter
    "D203",   # https://docs.astral.sh/ruff/rules/one-blank-line-before-class/ - prevent warning: `one-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible. Ignoring `one-blank-line-before-class`
    "D213",   # https://docs.astral.sh/ruff/rules/multi-line-summary-second-line/ - prevent warning: `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible. Ignoring `multi-line-summary-second-line`
    "FBT",    # https://docs.astral.sh/ruff/rules/#flake8-boolean-trap-fbt - not sure of the value of preventing "boolean traps"
    "ISC001", # https://docs.astral.sh/ruff/rules/single-line-implicit-string-concatenation/ - this rule may cause conflicts when used with the ruff formatter
    "PD",     # https://docs.astral.sh/ruff/rules/#pandas-vet-pd - pandas isn't used
    "PT",     # https://docs.astral.sh/ruff/rules/#flake8-pytest-style-pt - pytest isn't used
]
lint.per-file-ignores.".vulture_ignore_list.py" = [
    "ALL",
]
lint.per-file-ignores."__init__.py" = [
    "D104", # https://docs.astral.sh/ruff/rules/undocumented-public-package/ - don't require doc strings in __init__.py files
]
lint.per-file-ignores."src/conf.py" = [
    "INP001", # https://docs.astral.sh/ruff/rules/implicit-namespace-package/ - false positive because this is a configuration file
]
lint.per-file-ignores."src/create_reference_md.py" = [
    "INP001", # https://docs.astral.sh/ruff/rules/implicit-namespace-package/ - false positive because this is a script
]
lint.per-file-ignores."tests/**/*.py" = [
    "ANN201", # https://docs.astral.sh/ruff/rules/missing-return-type-undocumented-public-function/ - don't require test functions to have return types
]
lint.isort.section-order = [
    "future",
    "standard-library",
    "third-party",
    "second-party",
    "first-party",
    "tests",
    "local-folder",
]
lint.isort.sections.second-party = [
    "shared",
    "shared_data_model",
]
lint.isort.sections.tests = [
    "tests",
]

[tool.codespell]
ignore-words-list = [
    "TestNG",
]

[tool.pyproject-fmt]
indent = 4
keep_full_version = true # Don't remove trailing zero's from version specifiers

[tool.mypy]
plugins = "pydantic.mypy"
ignore_missing_imports = false
incremental = false
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
