[project]
name = "tools"
version = "5.48.4"
requires-python = "==3.14.2"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "bandit==1.9.3",
    "codespell==2.4.1",
    "coverage==7.13.4",
    "fixit==2.2.1",
    "mypy==1.19.1",
    "pip-audit==2.10.0",
    "pyproject-fmt==2.16.2",
    "ruff==0.15.2",
    "troml==0.4.1",
    "unittest-xml-reporting==4.0.0", # Needed to generate JUnit XML output for Sonarcloud.io
    "vulture==2.14",
]

[dependency-groups]
just = [
    "rust-just==1.46.0",
]
uv = [
    "uv==0.10.6",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 120
src = [
    "src",
]
lint.select = [
    "ALL",
]
lint.ignore = [
    "COM812", # https://docs.astral.sh/ruff/rules/missing-trailing-comma/ - this rule may cause conflicts when used with the ruff formatter
    "D203",   # https://docs.astral.sh/ruff/rules/one-blank-line-before-class/ - prevent warning: `one-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible. Ignoring `one-blank-line-before-class`
    "D213",   # https://docs.astral.sh/ruff/rules/multi-line-summary-second-line/ - prevent warning: `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible. Ignoring `multi-line-summary-second-line`
    "ISC001", # https://docs.astral.sh/ruff/rules/single-line-implicit-string-concatenation/ - this rule may cause conflicts when used with the ruff formatter
    "TC006",  # https://docs.astral.sh/ruff/rules/runtime-cast-value/ - the rule claims it's often necessary to quote the first argument passed to cast(), but that's not the case in this code base
]
lint.per-file-ignores.".vulture-whitelist.py" = [
    "ALL",
]

[tool.pyproject-fmt]
indent = 4
keep_full_version = true  # Don't remove trailing zero's from version specifiers
