[project]
name = "api-server"
version = "5.48.0-rc.2"
requires-python = "==3.14.1"
classifiers = [
    "Framework :: Bottle",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "argon2-cffi==25.1.0",
    "bottle==0.13.4",
    "cryptography==46.0.3",
    "gevent==25.9.1",
    "ldap3==2.9.1",
    "lxml==6.0.2",
    "lxml-html-clean==0.4.3",
    "pymongo==4.15.5",
    "python-dateutil==2.9.0.post0",
    "requests==2.32.5",
    "shared-code",
]
optional-dependencies.dev = [
    "coverage==7.12.0",
    "pydantic==2.12.5",                      # Needed for importing the data model in the tests from the shared code component
    "types-cryptography==3.3.23.2",
    "types-ldap3==2.9.13.20250622",
    "types-python-dateutil==2.9.0.20251115",
    "types-requests==2.32.4.20250913",
    "unittest-xml-reporting==3.2.0",         # Needed to generate JUnit XML output for Sonarcloud.io
]
optional-dependencies.tools = [
    "bandit==1.9.2",
    "fixit==2.2.1",
    "mypy==1.19.0",
    "pip-audit==2.10.0",
    "pyproject-fmt==2.11.1",
    "ruff==0.14.7",
    "troml==0.4.1",
    "vulture==2.14",
]

[tool.uv.sources]
shared-code = { path = "../shared_code", package = true }

[tool.ruff]
line-length = 120
src = [
    "src",
]
lint.select = [
    "ALL",
]
lint.ignore = [
    "ANN001", # https://docs.astral.sh/ruff/rules/missing-type-function-argument/ - too many untyped arguments atm to turn this rule on
    "ANN002", # https://docs.astral.sh/ruff/rules/missing-type-args/ - leads to false positives for super().__init__(*args, **kwargs)
    "ANN003", # https://docs.astral.sh/ruff/rules/missing-type-kwargs/ - leads to false positives for super().__init__(*args, **kwargs)
    "ANN201", # https://docs.astral.sh/ruff/rules/missing-return-type-undocumented-public-function/ - too many untyped return values atm to turn this rule on
    "COM812", # https://docs.astral.sh/ruff/rules/missing-trailing-comma/ - this rule may cause conflicts when used with the ruff formatter
    "D107",   # https://docs.astral.sh/ruff/rules/undocumented-public-init/ - requiring __init__() methods to have docstrings seems a bit much
    "D203",   # https://docs.astral.sh/ruff/rules/one-blank-line-before-class/ - prevent warning: `one-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible. Ignoring `one-blank-line-before-class`
    "D213",   # https://docs.astral.sh/ruff/rules/multi-line-summary-second-line/ - prevent warning: `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible. Ignoring `multi-line-summary-second-line`
    "FBT",    # https://docs.astral.sh/ruff/rules/#flake8-boolean-trap-fbt - not sure of the value of preventing "boolean traps"
    "I001",   # https://docs.astral.sh/ruff/rules/unsorted-imports/ - (probably) because ruff is run with uvx it can't differentiate between dependencies and modules
    "ISC001", # https://docs.astral.sh/ruff/rules/single-line-implicit-string-concatenation/ - this rule may cause conflicts when used with the ruff formatter
    "PD",     # https://docs.astral.sh/ruff/rules/#pandas-vet-pd - pandas isn't used
    "PT",     # https://docs.astral.sh/ruff/rules/#flake8-pytest-style-pt - pytest isn't used
    "TC006",  # https://docs.astral.sh/ruff/rules/runtime-cast-value/ - the rule claims it's often necessary to quote the first argument passed to cast(), but that's not the case in this code base
]
lint.per-file-ignores.".vulture_ignore_list.py" = [
    "ALL",
]
lint.per-file-ignores."__init__.py" = [
    "D104", # https://docs.astral.sh/ruff/rules/undocumented-public-package/ - don't require doc strings in __init__.py files
    "F401", # https://docs.astral.sh/ruff/rules/unused-import/ - routes are imported in __init__.py files to flatten the module hierarchy
]
lint.per-file-ignores."src/model/issue_tracker.py" = [
    "BLE001", # https://docs.astral.sh/ruff/rules/blind-except/ - allow for catching blind exception `Exception`
]
lint.per-file-ignores."src/quality_time_server.py" = [
    "E402",
    "INP001", # https://docs.astral.sh/ruff/rules/implicit-namespace-package/ - false positive because this is the main script
]
lint.per-file-ignores."tests/**/*.py" = [
    "ANN201", # https://docs.astral.sh/ruff/rules/missing-return-type-undocumented-public-function/ - don't require test functions to have return types
    "S105",   # https://docs.astral.sh/ruff/rules/hardcoded-password-string/ - hardcoded passwords in test code are test data
    "S106",   # https://docs.astral.sh/ruff/rules/hardcoded-password-func-arg/ - hardcoded passwords in test code are test data
]
lint.isort.section-order = [
    "future",
    "standard-library",
    "third-party",
    "second-party",
    "first-party",
    "tests",
    "local-folder",
]
lint.isort.sections."second-party" = [
    "shared",
    "shared_data_model",
]
lint.isort.sections.tests = [
    "tests",
]

[tool.pyproject-fmt]
indent = 4
keep_full_version = true # Don't remove trailing zero's from version specifiers

[tool.mypy]
ignore_missing_imports = false
incremental = false
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "bottle",
    "gevent",
    "lxml.html",
    "lxml_html_clean",
]
ignore_missing_imports = true
